# fastapi-postgres-tdd-docker-template

./: .gitignore  README.md  docker-compose.yml  pytest.ini
.github/workflows/: latest-changes.yml
docs/: RELEASE-NOTES.md
project/: pyproject.toml  requirements-dev.txt  requirements.txt
project/tests/: test_pyproject_toml.py
